webook-server/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
#  specification
spec:
  #  副本数量
  replicas: 3
  selector:
    matchLabels:
      app: webook
  #      template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook
    #    POD 的具体信息
    spec:
      containers:
        - name: webook
          image: arvin/webook:v0.0.1
          ports:
            - containerPort: 8080
